k8s/expense-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: expense-service
  template:
    metadata:
      labels:
        app: expense-service
    spec:
      containers:
        - name: expense-service
          image: minnuantony/expense-service:latest   # <-- change image name
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: expense-service
spec:
  selector:
    app: expense-service
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
