k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: minnuantony/frontend:latest   # <-- change image name
          ports:
            - containerPort: 80
          resources:
             requests:
               cpu: 100m
               memory: 100Mi
             limits:
               cpu: 500m
               memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080   # <-- change if port conflict
  type: NodePort
