k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: minnuantony/user-service:latest   # <-- change image name
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 100Mi      #128Mi 
            limits:
              cpu: 500m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
